# entish

./: CONTRIBUTING.md  Cargo.toml  README.md
entish/: Cargo.toml
entish-derive/: Cargo.toml
entish-derive/src/: entish.rs  lib.rs  pattern.rs  utils.rs
entish-test/: Cargo.toml
entish-test/src/: main.rs
entish/src/: lib.rs  prelude.rs
