[package]
name = "entish-derive"
version = "0.1.0"
authors = ["Damien Broka <damien@openquery.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = { version = "1.0", features = [ "fold", "extra-traits", "full" ] }
quote = "1.0"

